--- a/Compare.html
+++ b/Compare.html
@@ -142,9 +142,15 @@
         </tr>
         <tr>
             <td>Remove</td>
-            <td><button style="cursor: pointer;">🗑️</button></td>
-            <td><button style="cursor: pointer;">🗑️</button></td>
-            <td><button style="cursor: pointer;">🗑️</button></td>
+            <td><button style="cursor: pointer;"><span class="material-symbols-outlined">
+                delete
+                </span></button></td>
+            <td><button style="cursor: pointer;"><span class="material-symbols-outlined">
+                delete
+                </span></button></td>
+            <td><button style="cursor: pointer;"><span class="material-symbols-outlined">
+                delete
+                </span></button></td>
         </tr>
     </tbody>
 </table>
@@ -212,11 +218,11 @@
 </div>
 <!--  -->
 <hr>
-<div class="last">
-<h6 class="copyright">Copyright <i class="fa fa-copyright"></i> Likith. All Rights Reserved </h6>
-<div>
-    <h6>Design by <span style="color: green;">Likith Anil</span></h6>
-</div>
+  <div class="last">
+    <h6 class="copyright"><i class="fa fa-copyright"></i> 2024 LIKITH. All Rights Reserved </h6>
+    <div>
+        <h6>Designer by <span style="color: green;">Likith Anil</span></h6>
+    </div>
 </div>
 
 
