--- a/Login.html
+++ b/Login.html
@@ -71,7 +71,7 @@
             <input type="password" name="" id="" placeholder="Your password" style="height: 30px; width: 450px; border-radius: 5px;">
            </div>
            <br>
-            <button style="height: 30px; width: 80px; background-color: rgb(65, 172, 152); color: white; border-radius: 5px; cursor: pointer;">Login</button>
+            <button style="height: 40px; width: 100px; background-color: rgb(65, 172, 152); color: white; border-radius: 5px; cursor: pointer;">Login</button>
         </div>
 
         <div class="login-two">
@@ -92,7 +92,7 @@
             <input type="password" name="" id="" placeholder="Conform password" style="height: 30px; width: 450px; border-radius: 5px;">
            </div>
            <br>
-            <button style="height: 30px; width: 140px; background-color: rgb(65, 172, 152); color: white; border-radius: 5px; cursor: pointer;">Submit & Register</button>
+            <button style="height: 45px; width: 220px; background-color: rgb(65, 172, 152); color: white; border-radius: 5px; cursor: pointer;">Submit & Register</button>
         </div>
         </div>
     </div>
@@ -162,10 +162,11 @@
   <!--  -->
   <hr>
   <div class="last">
-    <h6 class="copyright">Copyright <i class="fa fa-copyright"></i> Likith. All Rights Reserved </h6>
+    <h6 class="copyright"><i class="fa fa-copyright"></i> 2024 LIKITH. All Rights Reserved </h6>
     <div>
-        <h6>Design by <span style="color: green;">Likith Anil</span></h6>
+        <h6>Designer by <span style="color: green;">Likith Anil</span></h6>
     </div>
+</div>
 </div>
 </body>
 </html>
