--- a/My Account.html
+++ b/My Account.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,7 @@
     <link rel="stylesheet" href="./project.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
 
 </head>
 
@@ -90,11 +89,17 @@
                 <h3>Logout</h3>
             </div>
         </div>
+
+        <!--  -->
+
+
+
+        
         <div class="sidebartwo">
             <div class="sidebar-text">
                 <h1>Hello Rosi</h1>
             </div>
-            <div class="sidebar-text">
+            <div class="sidebar-textone">
                 <p>
                     From your account dashboard, you can easily check & view your recent order,
                     manage your shipping and billing addresses, and edit your password and account details.
@@ -169,12 +174,12 @@
     </div>
     <!--  -->
     <hr>
-    <div class="last">
-    <h6 class="copyright">Copyright <i class="fa fa-copyright "></i> Likith. All Rights Reserved </h6>
+  <div class="last">
+    <h6 class="copyright"><i class="fa fa-copyright"></i> 2024 LIKITH. All Rights Reserved </h6>
     <div>
-        <h6>Design by <span style="color: green;">Likith Anil</span></h6>
+        <h6>Designer by <span style="color: green;">Likith Anil</span></h6>
     </div>
-    </div>
+</div>
     
 </body>
 
