--- a/Shop.html
+++ b/Shop.html
@@ -85,7 +85,9 @@
             </div>
             <div class="clothing-bag">
                 <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                <div class="clothing-bagstyle">
+                    <span class="material-symbols-outlined">shopping_bag</span>
+                  </div>
             </div>
         </div>
     </div>
@@ -113,7 +115,9 @@
             </div>
             <div class="clothing-bag">
                 <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                <div class="clothing-bagstyle">
+                    <span class="material-symbols-outlined">shopping_bag</span>
+                  </div>
             </div>
         </div>
     </div>
@@ -142,7 +146,9 @@
             </div>
             <div class="clothing-bag">
                 <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                <div class="clothing-bagstyle">
+                    <span class="material-symbols-outlined">shopping_bag</span>
+                  </div>
             </div>
         </div>
     </div>
@@ -171,7 +177,9 @@
             </div>
             <div class="clothing-bag">
                 <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                <div class="clothing-bagstyle">
+                    <span class="material-symbols-outlined">shopping_bag</span>
+                  </div>
             </div>
         </div>
     </div>
@@ -200,7 +208,9 @@
             </div>
             <div class="clothing-bag">
                 <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                <div class="clothing-bagstyle">
+                    <span class="material-symbols-outlined">shopping_bag</span>
+                  </div>
             </div>
         </div>
     </div>
@@ -229,7 +239,9 @@
             </div>
             <div class="clothing-bag">
                 <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                <div class="clothing-bagstyle">
+                    <span class="material-symbols-outlined">shopping_bag</span>
+                  </div>
             </div>
         </div>
     </div>
@@ -258,7 +270,9 @@
             </div>
             <div class="clothing-bag">
                 <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                <div class="clothing-bagstyle">
+                    <span class="material-symbols-outlined">shopping_bag</span>
+                  </div>
             </div>
         </div>
     </div>
@@ -287,7 +301,9 @@
             </div>
             <div class="clothing-bag">
                 <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                <div class="clothing-bagstyle">
+                    <span class="material-symbols-outlined">shopping_bag</span>
+                  </div>
             </div>
         </div>
     </div>
@@ -370,11 +386,11 @@
 </div>
 <!--  -->
 <hr>
-<div class="last">
-<h6 class="copyright">Copyright <i class="fa fa-copyright "></i> Likith. All Rights Reserved </h6>
-<div>
-    <h6>Design by <span style="color: green;">Likith Anil</span></h6>
-</div>
+  <div class="last">
+    <h6 class="copyright"><i class="fa fa-copyright"></i> 2024 LIKITH. All Rights Reserved </h6>
+    <div>
+        <h6>Designer by <span style="color: green;">Likith Anil</span></h6>
+    </div>
 </div>
 
 
