--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Home</title>
-    <link rel="stylesheet" href="./project.css">
+    <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
@@ -28,7 +28,7 @@
         </div>
         <div>
             <ol class="list">
-                <li><a href="./Project.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./Shop.html">Shop</a></li>
                 <li><a href="./My Account.html">My Account</a></li>
                 <li><a href="./Compare.html">Compare</a></li>
@@ -151,7 +151,9 @@
                 </div>
                 <div class="clothing-bag">
                     <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                    <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                    <div class="clothing-bagstyle">
+                        <span class="material-symbols-outlined">shopping_bag</span>
+                      </div>
                 </div>
             </div>
         </div>
@@ -180,7 +182,9 @@
                 </div>
                 <div class="clothing-bag">
                     <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                    <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                    <div class="clothing-bagstyle">
+                        <span class="material-symbols-outlined">shopping_bag</span>
+                      </div>
                 </div>
             </div>
         </div>
@@ -209,7 +213,9 @@
                 </div>
                 <div class="clothing-bag">
                     <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                    <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                    <div class="clothing-bagstyle">
+                        <span class="material-symbols-outlined">shopping_bag</span>
+                      </div>
                 </div>
             </div>
         </div>
@@ -238,7 +244,9 @@
                 </div>
                 <div class="clothing-bag">
                     <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                    <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                    <div class="clothing-bagstyle">
+                        <span class="material-symbols-outlined">shopping_bag</span>
+                      </div>
                 </div>
             </div>
         </div>
@@ -267,7 +275,9 @@
                 </div>
                 <div class="clothing-bag">
                     <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                    <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                    <div class="clothing-bagstyle">
+                        <span class="material-symbols-outlined">shopping_bag</span>
+                      </div>
                 </div>
             </div>
         </div>
@@ -296,7 +306,9 @@
                 </div>
                 <div class="clothing-bag">
                     <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                    <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                    <div class="clothing-bagstyle">
+                        <span class="material-symbols-outlined">shopping_bag</span>
+                      </div>
                 </div>
             </div>
         </div>
@@ -325,7 +337,9 @@
                 </div>
                 <div class="clothing-bag">
                     <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                    <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                    <div class="clothing-bagstyle">
+                        <span class="material-symbols-outlined">shopping_bag</span>
+                      </div>
                 </div>
             </div>
         </div>
@@ -354,7 +368,9 @@
                 </div>
                 <div class="clothing-bag">
                     <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                    <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                    <div class="clothing-bagstyle">
+                        <span class="material-symbols-outlined">shopping_bag</span>
+                      </div>
                 </div>
             </div>
         </div>
@@ -477,7 +493,9 @@
                 </div>
                 <div class="clothing-bag">
                     <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                    <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                    <div class="clothing-bagstyle">
+                        <span class="material-symbols-outlined">shopping_bag</span>
+                      </div>
                 </div>
             </div>
         </div>
@@ -506,7 +524,9 @@
                 </div>
                 <div class="clothing-bag">
                     <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                    <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                    <div class="clothing-bagstyle">
+                        <span class="material-symbols-outlined">shopping_bag</span>
+                      </div>
                 </div>
             </div>
         </div>
@@ -535,7 +555,9 @@
                 </div>
                 <div class="clothing-bag">
                     <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                    <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                    <div class="clothing-bagstyle">
+                        <span class="material-symbols-outlined">shopping_bag</span>
+                      </div>
                 </div>
             </div>
         </div>
@@ -564,7 +586,9 @@
                 </div>
                 <div class="clothing-bag">
                     <h2>$230.85 <strike class="clothing-strike"> $245.5</strike></h2>
-                    <span class="material-symbols-outlined" style="padding-right: 30px;">shopping_bag</span>
+                  <div class="clothing-bagstyle">
+                    <span class="material-symbols-outlined">shopping_bag</span>
+                  </div>
                 </div>
             </div>
         </div>
@@ -696,9 +720,9 @@
     <div>
         <img src="./assets/AIT Logo.png" alt="" height="50px">
         <p>Contact:</p>
-        <h4>Address: 2-9 ,Guntur</h4>
-        <h4>Phone: 9491739185</h4>
-        <h4>Time: 10:00 - 18:00</h4>
+        <h4>Address: <span style="font-weight: 300;">2-9 ,Guntur</span></h4>
+        <h4>Phone: <span style="font-weight: 300;"> 9491739185</span></h4>
+        <h4>Time: <span style="font-weight: 300;">10:00 - 18:00</span></h4>
     
     <div class="icons4">
         <p>Follow me:</p>
@@ -740,9 +764,9 @@
   <!--  -->
   <hr>
   <div class="last">
-    <h6 class="copyright">Copyright <i class="fa fa-copyright"></i> Likith. All Rights Reserved </h6>
+    <h6 class="copyright"><i class="fa fa-copyright"></i> 2024 LIKITH. All Rights Reserved </h6>
     <div>
-        <h6>Design by <span style="color: green;">Likith Anil</span></h6>
+        <h6>Designer by <span style="color: green;">Likith Anil</span></h6>
     </div>
 </div>
     
